# RNiftyReg

./: .Rbuildignore  .covrignore  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS  README.Rmd  README.md  cleanup  configure  configure.ac
R/: affine.R  example.R  image.R  nifti.R  niftyreg.R  transform.R  xform.R  zzz.R
man/: affine.Rd  applyTransform.Rd  buildAffine.Rd  composeTransforms.Rd  convertAffine.Rd  decomposeAffine.Rd  deformationField.Rd  dumpNifti.Rd  forward.Rd  getDeformationField.Rd  halfTransform.Rd  internalImage.Rd  invertAffine.Rd  isAffine.Rd  isImage.Rd  jacobian.Rd  ndim.Rd  niftyreg.Rd  niftyreg.linear.Rd  niftyreg.nonlinear.Rd  niftyregLinear.Rd  niftyregNonlinear.Rd  pixdim.Rd  readAffine.Rd  readNifti.Rd  reexports.Rd  saveTransform.Rd  similarity.Rd  transformVoxelToWorld.Rd  transformWithAffine.Rd  transformWithControlPoints.Rd  translate.Rd  updateNifti.Rd  voxelToWorld.Rd  writeAffine.Rd  writeNifti.Rd  xform.Rd  xformToAffine.Rd
src/: AffineMatrix.cpp  AffineMatrix.h  DeformationField.cpp  DeformationField.h  Makevars  Makevars.in  Makevars.win  NiftiImage.cpp  NiftiImage.h  RNifti.cpp  _reg_affineTransformation.cpp  _reg_aladin.cpp  _reg_aladin.h  _reg_aladin_sym.cpp  _reg_blockMatching.cpp  _reg_f3d.cpp  _reg_f3d.h  _reg_f3d_sym.cpp  _reg_femTransformation.cpp  _reg_globalTransformation.cpp  _reg_localTransformation.cpp  _reg_localTransformation.h  _reg_localTransformation_be.cpp  _reg_localTransformation_jac.cpp  _reg_maths.cpp  _reg_mutualinformation.cpp  _reg_resampling.cpp  _reg_ssd.cpp  _reg_tools.cpp  aladin.cpp  aladin.h  (+20 more)
(+64 files in other folders)
